--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 .logo {
     font-size: 3rem;
     font-weight: 700;
-    font-family: "Cedarville Cursive", cursive;
+    font-family: "Sedgwick Ave", cursive;
     transition: color 0.5s ease; 
 }
 
@@ -27,15 +27,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+    padding: 1rem;
 }
+
 .nav-menu{
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 3rem;
+    gap: 1.5rem;
     font-size: 1.3rem;
 }
+
 .nav-menu li:hover {
     cursor: pointer;
     color: rgb(6, 245, 149);
@@ -43,10 +45,12 @@
     text-shadow: 0 0 10px #e2f916, 0 0 10px #369a3e;
     transition: .5s;
 }
+
 .nav-menu li::selection{
     text-shadow: 0 0 10px #e2f916, 0 0 10px #369a3e;
     background-color: transparent;
 }
+
 .nav-connect {
     padding: 1rem 1.6rem;
     border-radius: 3rem;
@@ -66,3 +70,22 @@
     transform: scale(1.05); /* Slightly scale up on hover for smooth effect */
 }
 
+/* Media Queries */
+@media screen and (max-width: 768px) {
+    .logo {
+        font-size: 3rem; 
+    }
+    .navbar {
+        flex-direction: column;
+    }
+
+    .nav-menu {
+        flex-direction:inherit;
+        align-items: center;
+        gap: .1rem;
+    }
+
+    .nav-menu li {
+        padding: 0.5rem; /* Adjusted padding for smaller screens */
+    }
+}
