--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -27,7 +27,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
 }
 
 .nav-menu{
@@ -87,5 +86,8 @@
 
     .nav-menu li {
         padding: 0.5rem; /* Adjusted padding for smaller screens */
+    }
+    .nav-connect{
+        padding: .5rem 1rem;
     }
 }
