--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,20 +1,90 @@
+.about{
+    font-family: "Outfit", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    margin: 2rem;
+}
 .about-title{
     font-family: "Sedgwick Ave", cursive;
-}
-.theme {
-    width: 4rem;
     position: relative;
-    margin-right: 6rem;
-    gap: 0;
-    animation: glow 1.5s ease-in-out infinite alternate; 
-    background-color: transparent; /* Set background color to transparent */
 }
+.about-title h1{
+    padding: 0  2rem;
+    font-size: 2.3rem;
+    font-weight: 600;
+}
+.about-title .theme {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+}
+.about-section{
+    display: flex;
+    gap: 2rem;
+}
+.about-right{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.about-para{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.about-left img{
+    width: 10rem;
+}
+.about-skills{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.about-skill{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    transition: 0.3s;
+}
+.about-skill p{
+    min-width: 6rem;
+    font-size: 1rem;
+    font-weight: 500;
+    color: rgba(167, 255, 220, 0.895);
+  text-shadow: 0 0 10px #e2f916, 0 0 10px #369a3e;
+}
+.about-skills
+ hr{
+    outline: none;
+    border: none;
+    width: 50%;
+    height: 0.2rem;
+    border-radius: 2rem;
+    background: linear-gradient(135deg, #369a3e,#e2f916);
 
-@keyframes glow {
-    0% {
-        box-shadow: 0 0 5px rgba(255, 106, 0, 0.7); /* Adjust color and size as needed */
-    }
-    100% {
-        box-shadow: 0 0 20px rgba(162, 255, 0, 0.849); /* Adjust color and size as needed */
-    }
+ }
+ .about-acivements{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-bottom: 2rem;
+ }
+.about-achivement{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    transition: 0.5s;
+}
+.about-achivement h1{
+    font-size: 3rem;
+    font-weight: 700;
+    color: rgba(167, 255, 220, 0.895);
+  text-shadow: 0 0 10px #e2f91685, 0 0 10px #369a3e;
 }
